# modus

./: .gitignore  eslint.config.mjs
api/: .env.example  .gitignore  README.md  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
api/src/: client.ts  router.ts  server.ts  trpc.ts
api/src/common/: clerk.ts  events.ts  logger.ts
api/src/db/: index.ts  schema.ts
api/src/db/migrations/: 0000_easy_sister_grimm.sql  0000_tricky_skin.sql  0001_stiff_franklin_richards.sql  0002_breezy_madame_hydra.sql  0003_oval_wallop.sql
api/src/modules/channel/: channel.router.ts  channel.router.types.ts  channel.service.ts
api/src/modules/dashboard/: dashboard.router.ts  dashboard.service.ts
api/src/modules/members/: member.router.ts  member.router.types.ts  member.service.ts
api/src/modules/message/: messag.router.ts  message.router.ts  message.router.types.ts  (+1 more)
app/: .env.example  .gitignore  .prettierignore  components.json  eslint.config.js  index.html  neutralino.config.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
app/.tmp/: auth_info.json  window_state.config.json
app/resources/: index.html  styles.css
app/resources/js/: index.js  main.js
app/src/: App.css  App.tsx  main.tsx  neutralino.d.ts  trpc.ts  vite-env.d.ts
app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
app/src/components/: HealthCheck.tsx
app/src/lib/: audio-control.ts  audio-converter.ts
app/src/types/: api.ts
(+53 files in other folders)
